修改springboot和jdk版本，修改若干问题